# phenomenal

./: .appveyor.yml  .coveragerc  .dockerignore  .gitignore  .gitlab-ci.yml  .gitlab-ci_old.yml  .readthedocs.yml  .travis.yml  AUTHORS.rst  AUTHORS.txt  CHANGELOG.md  CITATION.cff  ChangeLog.txt  Dockerfile  MANIFEST.in  README.md  README.rst  README.txt  TODO.txt  __init__.py  appveyor.yml  clean.sh  coverage_nosestests.cmd  diff.diff  environment.yml  files.txt  meshing.py  metainfo.ini  pyproject.toml  pyproject.toml.bak  readthedocs.yml  requirements.txt  setup.py  setup.py.bak  test.diff  travis.yml
.github/workflows/: conda-package-build.yml
benchmarks/notebook/: Binarization.ipynb  Calibration.ipynb  Chessboard.ipynb  Meshing.ipynb  Multi-view_reconstruction.ipynb  Pipeline_RATP.ipynb  Pipeline_images_to_mesh.ipynb  chessboard_2.json
benchmarks/notebooks/: Chessboard.ipynb  Meshing.ipynb  Multi-view_reconstruction.ipynb
benchmarks/scripts/: calibration.py  calibration_2_target.py  calibration_camera_side_and_top_with_1_target.py  calibration_camera_side_with_1_target.py  calibration_camera_side_with_2_target.py  calibration_camera_top_with_1_target.py  calibration_simple.py  calibration_top.py  calibration_validation.py  chessboard.py  chessboard_1.json  chessboard_top.py  compute_volume.py  mesh.py  mesh_decimation.py  meshing.py  multi-view_reconstruction.py  multi-view_reconstruction_profile_time.py  multi-view_reconstruction_reprojection_error.py  multi_view_reconstruction_without_loss.py  new_reconstruction_3.py  pipeline_binarization_to_mesh.py  voxel_centers_size_1.xyz.REMOVED.git-id
binder/: environment.yml
build_tools/cloud/: dependency-cloud-ubuntu.txt  deploy_cloud.sh  gitlab  gitlab_private_key  install-cloud-ubuntu.sh
build_tools/conda/: environment.yaml  meta.yaml
conda/: conda_build_config.yml  environment.yaml  environment.yml  meta.yaml  py312.yaml  rtd-environment.yml
doc/: Makefile  Phenomenal.ipynb  Time_processing_octree.odp  Todo_list_Simon.odp  api.rst  authors.rst  conf.py  contents.rst  environment.yml  environment_list.txt  index.rst  installation.rst  make.bat  readme.rst  usage.rst
doc/_templates/: custom-module-template.rst
doc/examples/: Binarization.ipynb  Calibration.ipynb  Leaf_extension.ipynb  McCormick_Validation.ipynb  Multi-view reconstruction and Meshing.ipynb  Pipeline from point cloud file.ipynb  Segmentation.ipynb  Synthetic_Validation.ipynb  Tracking.ipynb
doc/source/: authors.rst  conf.py  index.html  index.rst  license.rst
doc/user/: autosum.rst  index.rst
example/: 1047.xyz  1086.xyz  1111.xyz  1203.xyz  1280.xyz  528.xyz  595.xyz  989.xyz  __init__.py  calibration.pickle  calibration.py  chessboard.py  compute_leaf_lost_error.py  compute_volume.py  example_tools.py  leaf_lost_error.py  leaf_lost_error_2.py  leaf_lost_reconstruction.py  leaf_lost_reconstruction_2.py  leaf_lost_reconstruction_3.py  meshing.py  multi-view_reconstruction.py  new_reconstruction_3.py  pipeline_binarization_to_mesh.py  pipeline_segmentation_2d.py  script.py  script_pipeline.py  script_reconstruction_3d.py  script_test.py  test_time_multi-view_reconstruction.py  time_processing_deque.py  volumes.json
example/PhenoArch_chessboard/: chessboard_1.json  chessboard_elcom_5_1.json  chessboard_elcom_5_2.json  chessboard_elcom_6_1.json  chessboard_elcom_6_2.json
example/PhenoArch_parameters/: params_camera_elcom_5.json  params_camera_elcom_6.json  params_chessboard_elcom_5_1.json  params_chessboard_elcom_5_2.json  params_chessboard_elcom_6_1.json  params_chessboard_elcom_6_2.json
example/binarization/: example_binarization.py  example_binarization_adaptive_threshold.py  example_binarization_elcom.py  example_binarization_hsv.py  example_binarization_mean_shift.py  example_post_processing.py
example/calibration/: calibration_1_script.py  corners_points  (+26 more)
examples/: Binarization.ipynb  Calibration.ipynb  Chessboard.ipynb  Leaf_extension.ipynb  McCormick_Validation.ipynb  Multi-view reconstruction and Meshing.ipynb  Pipeline from point cloud file.ipynb  Segmentation 3D.ipynb  Segmentation.ipynb  Synthetic_Validation.ipynb  Tracking.ipynb  voxel_maize_segmentation.json  voxel_maize_segmentation_info
install/: gitlab.pub  install-cloud-ubuntu.sh
notebook/: Calibration.ipynb  Chessboard.ipynb  Meshing.ipynb  Phenomenal.ipynb  Pipeline_RATP.ipynb  chessboard.json  plot_marching_cubes.ipynb
share/: dataexample_calibration_opencv.pickle
test/: test.json  test_binarization_adaptive_threshold.py  test_binarization_algorithm_get_mean_image.py  test_binarization_algorithm_hsv_binarization.py  test_binarization_algorithm_mean_shift.py  test_binarization_algorithm_mean_shift_binarization.py  test_binarization_algorithm_threshold_hsv.py  test_binarization_get_mean_image.py  test_binarization_hsv.py  test_binarization_mean_shift.py  test_binarization_post_processing_clean_noise.py  test_binarization_post_processing_remove_plant_support.py  test_binarization_routine_blur_hsv_erode_dilate.py  test_binarization_routine_line_adaptive_threshold.py  test_binarization_routine_meanshift_hsv.py  test_binarization_routine_meanshift_hsv_elcom.py  test_binarization_routine_roi_hsv.py  test_binarization_side_binarization_adaptive_thresh.py  test_binarization_side_binarization_elcom.py  test_binarization_side_binarization_hsv.py  test_binarization_side_binarization_mean_shift.py  test_binarization_top_binarization_hsv.py  test_calibration_chess_frame.py  test_calibration_model_parameters.py  test_calibration_model_projection.py  test_calibration_opencv.py  test_calibration_projection.py  test_chessboard.py  test_data_transformation.py  test_file.json  test_get_mean_image.py  test_load_configuration.py  test_mesh.py  test_multi_view_reconstruction.py  test_multi_view_reconstruction_bbox_projection.py  test_multi_view_reconstruction_corners_point_3d.py  test_multi_view_reconstruction_get_bounding_box_voxel_projected.py  test_multi_view_reconstruction_get_voxel_corners.py  test_multi_view_reconstruction_jerome.py  test_multi_view_reconstruction_manual.py  (+14 more)
(+659 files in other folders)
