[build-system]
requires = ["setuptools", "numpy<2.0", "cython"] # Change the restricted version when updating from numpy 1.x
build-backend = "setuptools.build_meta"

[project]
name = "openalea.phenomenal"
authors = [
  { name = "Simon Artzet"},
  { name = "Christian Fournier"},
  { name = "Mielewczik Michael"},
  { name = "Brichet Nicolas"},
  { name = "Chopard Jerome"},
  { name = "Christophe Pradal"},
  { name = "Benoit Daviet"},
]
description = "An automatic open source library for 3D shoot architecture reconstruction and analysis for image-based plant phenotyping"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: CeCILL-C License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]
dynamic = ["version", "readme"]
dependencies = [
  "cython",
  "numpy<2.0",
  "numba",
  "scipy",
  "scikit-image",
  "scikit-learn",
  "networkx",
  "opencv-python",
  "matplotlib",
  "vtk",
  "skan",
  "orjson",
]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Homepage = "https://openalea.readthedocs.io/"
"Bug Tracker" = "https://github.com/openalea/phenomenal/issues"
Discussions = "https://github.com/openalea/phenomenal/discussions"
Changelog = "https://github.com/openalea/phenomenal/releases"

[project.entry-points."wralea"]
"openalea.phenomenal" = "openalea.phenomenal_wralea"

[tool.setuptools.dynamic]
version = {attr = "openalea.phenomenal.__version__"}
readme = {file = ["README.md"]}

[tool.setuptools.packages.find]
where = ["src"]
include = ["openalea.*"]

[tool.setuptools.package-data]
"*" = ["*.so", "*.dylib", "*.dll", "*.pyx","*.cpp","*.c","*.h"]
